<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search_by_id"
        android:orderInCategory="100"
        android:title="@string/search_by_id"
        app:showAsAction="never" />
    |
    <item
        android:id="@+id/action_search_by_no"
        android:orderInCategory="100"
        android:title="@string/search_by_no"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_search_by_name"
        android:orderInCategory="100"
        android:title="@string/search_by_name"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_search_by_fencename"
        android:orderInCategory="100"
        android:title="@string/search_by_fence_name"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_search_by_rule"
        android:orderInCategory="100"
        android:title="@string/search_by_rule"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_search_by_question"
        android:orderInCategory="100"
        android:title="@string/search_by_question"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_search_by_anster"
        android:orderInCategory="100"
        android:title="@string/search_by_anster"
        app:showAsAction="never" />

</menu>
